# MARL-LLM

./: README.md
Swarm_test/algorithm/algorithms/: airl.py  maddpg.py  mappo.py
Swarm_test/algorithm/mappo_utils/: actor_critic.py  agents.py  buffer.py  distributions.py  tool_networks.py  util.py  value_norm.py
Swarm_test/algorithm/utils/: agents.py  buffer.py  buffer_episode.py  buffer_expert.py  buffer_variable_num.py  networks.py
Swarm_test/cfg/: flocking_cfg.py  flocking_mappo_cfg.py  formation_cfg copy.py  formation_cfg.py  formation_mappo_cfg.py
Swarm_test/eval/: collect_expert_data.py  draft.py  evaluate_flocking.py  evaluate_flocking_mappo.py  evaluate_formation.py  evaluate_formation_airl.py  evaluate_formation_airl_mappo.py
Swarm_test/train/: train_flocking.py  train_flocking_mappo.py  train_formation.py  train_formation_airl.py  train_formation_airl_mappo.py  train_formation_dense.py  train_formation_dense2.py  train_formation_from_airl.py
cus_gym/gym/envs/: __init__.py
cus_gym/gym/wrappers/: __init__.py
customized_gym/gym/envs/customized_envs/envs_cplus/: CMakeLists.txt
customized_gym/gym/envs/customized_envs/envs_cplus/src/: AdversarialEnv.cpp  AdversarialEnv.h  FlockingEnv.cpp  FlockingEnv.h  FormationEnv.cpp  FormationEnv.h  FormationEnv_dense.cpp  FormationEnv_dense.h  PredatorPreyEnv.cpp  PredatorPreyEnv.h
llm_rl/cfg/: formation_cfg.py
llm_rl/eval/: collect_expert_data.py
llm_rl/train/: train_formation.py
marl_llm/cfg/: assembly_cfg.py
marl_llm/eval/: collect_expert_data.py  evaluate_formation.py
marl_llm/train/: train_formation_airl.py
(+51 files in other folders)
